Fix z-index color picker
ERM40096

[5.x]

(cherry picked from commit 9d4e074b9d2bf995705b4fffc41b273d0853fc91)

--- a/resources/stylesheets/fixes/mw-fixes.css
+++ b/resources/stylesheets/fixes/mw-fixes.css
@@ -58,3 +58,7 @@ body.mw-underline-always .mw-body-content a {
 .skin-bluespicediscovery #mw-teleport-target {
 	z-index: 2000;
 }
+
+.skin-bluespicediscovery .oojs-plus-color-picker-standalone {
+	z-index: 2050;
+}
